# anime-fan-python

./: README.md
.github/workflows/: ci.yml
ainouta-nlp/: word_counter.py
ainouta-pilgrim/: Makefile  collect_tweets.py  download_tweet_images.py  open_images.py  requirements.in
dreams-come-true/: auto_dreampass.py
github-like/: .gitignore  Makefile  README.md  convert.py  show_commits.html
lycoreco-aquatope/: app.py  requirements.in
lycoreco-aquatope/cloudnative_version/: skaffold.yaml
lycoreco-aquatope/cloudnative_version/k8s/: api.yaml  configmap.yaml
lycoreco-aquatope/lycoreco-api-test/: .gitignore  manifest.json
lycoreco-aquatope/lycoreco-api-test/env/default/: user.properties
lycoreco-aquatope/lycoreco-api-test/specs/: aquatope.spec
lycoreco-aquatope/lycoreco-api-test/step_impl/: aquatope.py
lycoreco-aquatope/wiremock_version/: README.md
lycoreco-aquatope/wiremock_version/__files/: chisato.json
lycoreco-aquatope/wiremock_version/mappings/: chisato.json  takina.json
moon-painter/: main.py
pilgrimage-webpy/: app.py  code.py
play-canvas/: phrase_image.html
satomi-alarm/: after_x_minutes.py  autoplay.html  for_crontab.sh
x-days-anniversary/: main.py  setup.cfg  setup.py  tox.ini
x-days-anniversary/rust_practice/: .gitignore
x-days-anniversary/rust_practice/day-counter/: Cargo.toml
x-days-anniversary/rust_practice/day-counter/src/: main.rs
x-days-anniversary/src/: core.py
x-days-anniversary/src/sparkling_counter/: __init__.py  core.py
x-days-anniversary/tests/: test_core.py
zero-wa-giri/: anime_list.py
