[metadata]
name = sparkling-counter
version = 1.2.0a1
descrption = Count the days from/to the spark-joy✨ date for you!
author = nikkie
author_email = takuyafjp+develop@gmail.com
uri = https://github.com/ftnext/anime-fan-python/tree/master/x-days-anniversary
license = MIT

[options]
package_dir =
    =src
packages=find:

[options.packages.find]
where=src
